double to int (quantity related)